fix(RadioCheckbox): alignment fix

--- a/src/components/reusable/checkbox/checkbox.scss
+++ b/src/components/reusable/checkbox/checkbox.scss
@@ -7,6 +7,7 @@
 
 label {
   display: inline-flex;
+  align-items: center;
   width: 100%;
   position: relative;
 
@@ -30,7 +31,7 @@ input {
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
-  margin: 4px 0 0;
+  margin: 0px;
   width: 16px;
   height: 16px;
   border: 2px solid var(--kd-color-border-ui);
