--- a/src/components/reusable/radioButton/radioButton.scss
+++ b/src/components/reusable/radioButton/radioButton.scss
@@ -6,6 +6,7 @@
 
 label {
   display: inline-flex;
+  align-items: center;
 
   &[disabled] {
     color: var(--kd-color-text-disabled);
@@ -24,7 +25,7 @@ input {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  margin: 3px 10px 0 0;
+  margin: 1px 10px 0 0;
   width: 18px;
   height: 18px;
   border: 2px solid var(--kd-color-border-ui);
